--- a/OHD_SEM3.csproj
+++ b/OHD_SEM3.csproj
@@ -18,4 +18,8 @@
     <Folder Include="Models\ViewModel\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\js\site.js" />
+  </ItemGroup>
+
 </Project>
